--- a/src/components/WhyUs.css
+++ b/src/components/WhyUs.css
@@ -5,16 +5,37 @@
     padding: 25px;
     border-radius: 10px;
     z-index: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 .why-us::before {
   content: '';
   position: absolute;
   top: 0;
-  left: 0;
-  width: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 327px;
   height: 902px;
   background-color: #2C343E;
   z-index: -1;
   border-radius: 10px;
+}
+
+@media only screen and (min-width: 640px) {
+  
+  .why-us::before {
+    height: 573px;
+    width: 100%;
+    max-width: 688px;
+  }
+
+}
+
+@media only screen and (min-width: 1440px){
+  .why-us::before {
+    height: 577px;
+    width: 100%;
+    max-width: 1280px;
+  }
 }
