--- a/src/components/Question.css
+++ b/src/components/Question.css
@@ -10,3 +10,38 @@
   .arrow-up {
     transform: rotate(180deg);
   }
+
+  .openIn{
+    animation: openIn 0.3s ease-out;
+  }
+
+  .closeOut{
+    animation: closeOut 0.3s ease-in-out;
+    
+  }
+
+  @keyframes openIn {
+    0%{
+      opacity: 0;
+      transform: translateY(-100px);
+    }
+
+    100%{
+    opacity: 100%;
+    transform: translateY(0px);  
+    }
+  }
+
+  @keyframes closeOut{
+    0%{
+      opacity: 100%;
+      transform: translateY(0px);
+      display: block;
+    }
+
+    100%{
+      opacity: 0;
+      transform: translateY(-100px);
+      
+    }
+  }
